# otus_cpp_kkmeans

./: .gitmodules  .travis.yml  README.md
data/: stars.txt
inc/: plot.h  types.h
src/: CMakeLists.txt  main.cpp  plot.cpp
